Added missing trailing slash on PSR-4 autoload config

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "CubicMushroom\\Symfony": "src/"
+            "CubicMushroom\\Symfony\\": "src/"
         }
     },
     "extra": {
